No more eclipse xpath2, new XSD1.1 processor: evaluating xpaths still leaks memory, so commented out.  Very fast processing, now that it's parallel.